# galaxy-collision-simulation

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml  requirements.txt  smoke_test.toml
configs/: direct_1000_r3.toml  fmm_1000_r1.toml  fmm_250_r1.toml  readme_1000_body_collision.toml  smoke_test.toml
cpp/core/: build_config.hpp.in  config.cpp  config.hpp  diagnostics.cpp  diagnostics.hpp  initial_conditions.cpp  initial_conditions.hpp  integrator.cpp  integrator.hpp  main.cpp  particle.hpp  simulation_info.cpp  simulation_info.hpp  simulation_params.hpp  smoke_main.cpp  vector2.hpp
cpp/cuda/: README.md  cuda_smoke.cu  cuda_solver.cu  cuda_solver.hpp  cuda_solver_stub.cpp
cpp/direct/: README.md  direct_solver.cpp  direct_solver.hpp
cpp/fmm/: README.md  fmm_solver.cpp  fmm_solver.hpp  multipole.cpp  multipole.hpp  quadtree.cpp  quadtree.hpp
cpp/io/: README.md  snapshot_writer.cpp  snapshot_writer.hpp
cpp/mpi/: README.md  distributed_solver.cpp  distributed_solver.hpp
cpp/tests/: smoke_tests.cpp
direct_1000_r1/: snapshot_000000.csv
direct_1000_r3/: metadata.json
direct_250_r1/: diagnostics.csv
direct_500_r1/: metadata.json
docs/: architecture.md  design.md  milestones.md  testing.md
docs/benchmarks/: local_cpu_benchmark.csv  local_cpu_benchmark.md
experiments/benchmarks/configs/: direct_1000_r1.toml  direct_1000_r2.toml  direct_250_r1.toml  direct_250_r2.toml  direct_250_r3.toml  direct_500_r1.toml  direct_500_r2.toml  direct_500_r3.toml  fmm_1000_r2.toml  fmm_1000_r3.toml  fmm_500_r2.toml  fmm_500_r3.toml  tree_1000_r1.toml  tree_1000_r3.toml  tree_250_r1.toml  tree_250_r2.toml  tree_250_r3.toml  tree_500_r1.toml  tree_500_r2.toml  tree_500_r3.toml
experiments/benchmarks/local_cpu/configs/: fmm_250_r2.toml  fmm_250_r3.toml  fmm_500_r1.toml  tree_1000_r2.toml
experiments/benchmarks/outputs/direct_1000_r1/: diagnostics.csv
experiments/benchmarks/outputs/direct_250_r1/: snapshot_000020.csv
experiments/validation/readme_1000_body_collision/: diagnostics.csv  metadata.json  snapshot_000001.csv  snapshot_000002.csv  snapshot_000003.csv  snapshot_000004.csv  snapshot_000005.csv  snapshot_000006.csv  snapshot_000007.csv  snapshot_000008.csv  snapshot_000009.csv  snapshot_000010.csv  snapshot_000011.csv  snapshot_000012.csv  snapshot_000013.csv  snapshot_000014.csv  snapshot_000015.csv  snapshot_000016.csv  snapshot_000017.csv  snapshot_000018.csv  snapshot_000019.csv  snapshot_000020.csv  snapshot_000021.csv  snapshot_000022.csv  snapshot_000023.csv  snapshot_000024.csv  snapshot_000025.csv  snapshot_000026.csv  snapshot_000027.csv  snapshot_000028.csv  snapshot_000029.csv  snapshot_000030.csv  snapshot_000031.csv  snapshot_000032.csv  snapshot_000033.csv  snapshot_000034.csv  snapshot_000035.csv  snapshot_000036.csv  snapshot_000037.csv  snapshot_000038.csv  (+261 more)
fmm_1000_r1/: diagnostics.csv
fmm_250_r2/: metadata.json  snapshot_000000.csv
fmm_500_r1/: snapshot_000020.csv
fmm_500_r2/: metadata.json
old/: README.md
python/analysis/: plot_snapshots.py
python/animation/: interactive_viewer.py  render_snapshots.py
python/utils/: snapshots.py
scripts/: build.ps1  build.sh  render_readme_snapshot_gif.py  run_benchmarks.py  run_smoke_test.ps1  run_smoke_test.sh
tree_1000_r1/: metadata.json
tree_1000_r3/: snapshot_000020.csv
tree_250_r2/: diagnostics.csv
tree_500_r1/: snapshot_000020.csv
tree_500_r2/: metadata.json  snapshot_000000.csv
(+19 files in other folders)
