[project]
name = "fmm-galaxy-tools"
version = "0.1.0"
description = "Python analysis and animation tools for the distributed FMM galaxy simulator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "h5py>=3.10",
    "pandas>=2.1",
    "tqdm>=4.66",
    "moviepy>=1.0",
    "imageio>=2.33",
    "imageio-ffmpeg>=0.4",
    "pyyaml>=6.0",
]

[tool.black]
line-length = 100
